fix alignment

--- a/styles/designs/carnival/parts/_eoc-components.scss
+++ b/styles/designs/carnival/parts/_eoc-components.scss
@@ -84,11 +84,20 @@ $Exercisetitle_Container: eocSectionTitleH3(".exercises");
 $ReviewQuestionsTitle_Container: eocSectionTitleH3(".os-review-questions-container");
 // $FillInTheBlankTitle_Container: eocSectionTitleH3(".os-fill-in-the-blank-container");
 
-$Problem_container:(
-    _name: "ProbelemContainer",
+
+$Problem_wrapper:(
+    _name: "ProblemWrapper",
     _subselector: " [data-type='problem']",
     _properties:(
+        display: table,
+    )
+);
 
+$Problem_container:(
+    _name: "ProblemContainer",
+    _subselector: " .os-problem-container",
+    _properties:(
+        display: table-cell,
     )
 );
 
@@ -99,6 +108,7 @@ $Problem_Number:(
         color:  enum('ValueSet:::REQUIRED'),
         font-weight:  enum('ValueSet:::REQUIRED'),
         text-decoration:  enum('ValueSet:::REQUIRED'),
+        display: table-cell,
     )
 );
 
