--- a/styles/output/anatomy-pdf.css
+++ b/styles/output/anatomy-pdf.css
@@ -1190,12 +1190,16 @@ span[data-type="term"]:not(.no-emphasis) {
   column-span: all;
   margin-bottom: 1.5rem; }
 
-[data-type='chapter'] > .os-interactive-exercise-container [data-type='problem'] .os-number {
+[data-type='chapter'] > .os-interactive-exercise-container .os-problem-container {
+  display: table-cell; }
+
+[data-type='chapter'] > .os-interactive-exercise-container .os-problem-container .os-number {
   color: #000000;
   font-weight: bold;
-  text-decoration: none; }
+  text-decoration: none;
+  display: table-cell; }
 
-[data-type='chapter'] > .os-interactive-exercise-container [data-type='problem'] .os-divider {
+[data-type='chapter'] > .os-interactive-exercise-container .os-problem-container .os-divider {
   margin-right: 8px; }
 
 [data-type='chapter'] > .os-multiple-choice-container {
@@ -1214,12 +1218,16 @@ span[data-type="term"]:not(.no-emphasis) {
   column-span: all;
   margin-bottom: 1.5rem; }
 
-[data-type='chapter'] > .os-multiple-choice-container [data-type='problem'] .os-number {
+[data-type='chapter'] > .os-multiple-choice-container .os-problem-container {
+  display: table-cell; }
+
+[data-type='chapter'] > .os-multiple-choice-container .os-problem-container .os-number {
   color: #000000;
   font-weight: bold;
-  text-decoration: none; }
+  text-decoration: none;
+  display: table-cell; }
 
-[data-type='chapter'] > .os-multiple-choice-container [data-type='problem'] .os-divider {
+[data-type='chapter'] > .os-multiple-choice-container .os-problem-container .os-divider {
   margin-right: 8px; }
 
 [data-type='chapter'] > .os-free-response-container {
@@ -1238,12 +1246,16 @@ span[data-type="term"]:not(.no-emphasis) {
   column-span: all;
   margin-bottom: 1.5rem; }
 
-[data-type='chapter'] > .os-free-response-container [data-type='problem'] .os-number {
+[data-type='chapter'] > .os-free-response-container .os-problem-container {
+  display: table-cell; }
+
+[data-type='chapter'] > .os-free-response-container .os-problem-container .os-number {
   color: #000000;
   font-weight: bold;
-  text-decoration: none; }
+  text-decoration: none;
+  display: table-cell; }
 
-[data-type='chapter'] > .os-free-response-container [data-type='problem'] .os-divider {
+[data-type='chapter'] > .os-free-response-container .os-problem-container .os-divider {
   margin-right: 8px; }
 
 .os-eoc.os-glossary-container {
